# Blueprint

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md
src/: main.cpp
src/application/: CMakeLists.txt  application.cpp  application.cppm
src/archive/: CMakeLists.txt  archive.cppm
src/blueprint/: CMakeLists.txt  blueprint.cpp  blueprint.cppm  draw_node.cppm  style.cppm
src/builtin/: CMakeLists.txt  builtin_mapper.cppm  builtin_node.cppm  signed_integral.cppm
src/builtin/node/: display_image.cppm  float_arithmetic.cppm  identity_node.cpp  identity_node.cppm  integral_arithmetic.cppm  load_image.cpp  load_image.cppm  matrix_arithmetic.cppm  matrix_editor.cpp  matrix_editor.cppm
src/builtin/node/image_proc/: alpha_beta.cppm  image_add.cppm  image_blur.cppm  image_brightness.cppm  image_canny.cppm  image_color_split.cppm  image_compose.cppm  image_decompose.cppm  image_grayscale.cppm  image_kernel.cppm  image_resize.cppm  image_weighted.cppm  to_image.cppm  to_matrix.cppm
src/builtin/type/: float.cppm  image.cppm  matrix.cppm  signed_integral.cppm  unsigned_integral.cppm
src/constraint/: CMakeLists.txt  constraint.cppm  constraint_information.cppm  debug.cppm  node_state.cppm
src/draw_node/: CMakeLists.txt  builtin.cppm  debug.cppm  draw_node.cppm  draw_rule.cppm
src/draw_node/builtin/: float_point.cppm  image.cppm  integral.cppm  matrix.cppm
src/dyn_node/: CMakeLists.txt  builtin_node.cppm  builtin_type.cppm  cpo.cppm  definition.cppm  dyn_node.cppm  utility.cpp  utility.cppm
src/dyn_node/builtin/: CMakeLists.txt  builtin_node.cppm  signed_integral.cppm  unsigned_integral.cppm
src/dyn_node/byte_archive/: byte_archive.cppm
src/dyn_node/host_api/: host.cppm  host_api.cppm
src/dyn_node/util/: any_context.cppm  constant_node.cpp  constant_node.cppm  serialization.cppm  serialize.cpp  template_definition.cppm  trivial_node.cpp  trivial_node.cppm  utility.cpp  utility.cppm
src/flow/: CMakeLists.txt  NOID.cpp  NOID.cppm  constraint.cppm  constraint_flow.cpp  constraint_flow.cppm  debug.cppm  flow.cppm  link_events.cppm  link_manage.cpp  link_manage.cppm  node_instance_manage.cpp  node_instance_manage.cppm
src/flow/test/: NOID_test.cpp  constraint_test.cpp  flow_link_manager_event_test.cpp  flow_manager_test.cpp  link_manager_test.cpp  node_instance_manager_test.cpp  test_node_definition.h
src/gui/: CMakeLists.txt  forward_declaration.cppm  gui.cpp  gui.cppm  gui_debug.cppm  imgui_begin.cpp  imgui_begin.cppm  imnodes_context.cpp  imnodes_context.cppm  window.cpp  window.cppm
src/node_editor/: CMakeLists.txt  node_editor.cppm
src/nodes/: CMakeLists.txt  nodes.cpp  nodes.cppm
src/plugin_manage/: CMakeLists.txt  component_package.cppm  plugin.cppm
src/scheduler/: CMakeLists.txt  debug.cppm  event.cppm  executor.cppm  poller.cppm  scheduler.cppm
src/scheduler/test/: event_test.cpp  poller_test.cpp
src/stk_node/: CMakeLists.txt  stk_node.cppm  template_definition.cppm  template_type_definition.cppm  type_mapper.cppm  wrapper.cppm
src/stk_node/test/: type_mapper_test.cpp
tries/: CMakeLists.txt  main.cpp  module_unit.cppm  test_include.h
